# banshee-cleanup-plugin

./: AUTHORS  ProjectHome.md  README
src/: CleanupMenu.xml  CleanupPlugin.cs  Log.cs  Makefile.am
trunk/: ChangeLog  NEWS  autogen.sh  configure.ac
trunk/src/: CleanupPlugin.cs
